<resources>
    <string name="app_name">Login_DavidRoldan</string>
    <string name="delete_selected">delete selected</string>
    <string name="descripcion">descripcion</string>
    <string name="customers">CUSTOMERS</string>
    <string name="autores">AUTORES</string>
    <string name="libros">LIBROS</string>
    <string name="new_order">NEW ORDER</string>
    <string name="customer_id">Customer ID:</string>
    <string name="customerid">customerid</string>
    <string name="table_id">Table ID:</string>
    <string name="table_number">Table number</string>
    <string name="orders">ORDERS</string>
    <string name="id">ID:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email</string>
    <string name="phone">Phone:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="name">name</string>
    <string name="mesa">Mesa:</string>
    <string name="fecha">Fecha</string>
    <string name="search">SEARCH</string>
    <string name="add">add</string>
    <string name="admin_and_user">ADMIN: root-2dam | USER: test-test</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="twofacode">Two-Factor Code (check your email)</string>
    <string name="username">Username</string>
    <string name="verify">Verify</string>
    <string name="temporal_password">Temporal password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
</resources>