<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="framework.twofactor.TwoFactorFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etTwoFaLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etTwoFaLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameLayout"
        app:layout_constraintBottom_toTopOf="@+id/btnVerify">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTwoFa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/twofacode"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTwoFaLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_500"
        />

</androidx.constraintlayout.widget.ConstraintLayout>